# mainmatter-iconator

./: Cargo.toml  README.md  build.rs
icons/: README.md  lookup_table.rs
src/: file_loader.rs  lib.rs  main.rs  rest_api.rs
src/rest_api/: common_types.rs  id.rs  mod.rs  svg.rs
tests/: integration_test.rs
