[package]
name = "iconator"
version = "0.1.0"
edition = "2024"

[dependencies]
fst = "0.4.7"
lazy_static = "1.5.0"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }

[build-dependencies]
fst = "0.4.7"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serde_json = "1"
